# s1_transfer_data

./: chang_yuan.txt  test.py  yolov5s_10c_hxy.tar
AI_Test_v1.0/: CMakeLists.txt  README.md.txt
AI_Test_v1.0/AI_Engine/: CMakeLists.txt  README.md
AI_Test_v1.0/AI_Engine/classifier/: CMakeLists.txt
AI_Test_v1.0/AI_Engine/classifier/demo/: CMakeLists.txt  demo_extract_feature_image.cpp
AI_Test_v1.0/AI_Engine/classifier/inc/: classifier_tf.hpp
AI_Test_v1.0/AI_Engine/classifier/src/: classifier_mxnet.cpp  classifier_torch.cpp
AI_Test_v1.0/AI_Engine/classifier_video/demo/: demo_classifier_video.cpp
AI_Test_v1.0/AI_Engine/classifier_video/inc/: classifier_video_i3d.hpp
AI_Test_v1.0/AI_Engine/classifier_video/src/: classifier_video_i3d.cpp
AI_Test_v1.0/AI_Engine/common/: CMakeLists.txt
AI_Test_v1.0/AI_Engine/common/inc/: sak_log.hpp  sak_utils.hpp
AI_Test_v1.0/AI_Engine/common/src/: sak_utils.cpp
AI_Test_v1.0/AI_Engine/human_pose_estimation/demo/: demo_alphapose_estimation.cpp  demo_poseestimation_image.cpp
AI_Test_v1.0/AI_Engine/human_pose_estimation/inc/: pose_estimation_alphapose.hpp
AI_Test_v1.0/AI_Engine/human_pose_estimation/src/: pose_estimation_alphapose.cpp
AI_Test_v1.0/AI_Engine/mot_tracker/: CMakeLists.txt
AI_Test_v1.0/AI_Engine/mot_tracker/inc/: Hungarian.h  KalmanTracker.h  mot_tracker.hpp  mot_tracker_sort.hpp
AI_Test_v1.0/AI_Engine/mot_tracker/src/: Hungarian.cpp
AI_Test_v1.0/AI_Engine/object_detector/: CMakeLists.txt
AI_Test_v1.0/AI_Engine/object_detector/demo/: demo_tf_od_image_batch_effdet.cpp  demo_trtx_od_image_yolov5.cpp
AI_Test_v1.0/AI_Engine/object_detector/inc/: object_detection.hpp  object_detector.hpp  object_detector_mrcnn_tf.hpp  object_detector_tf_effidet.hpp  object_detector_trtx_yolov5.hpp  yololayer.h
AI_Test_v1.0/AI_Engine/object_detector/src/: object_detector_tf.cpp  object_detector_tflite.cpp  object_detector_trtx_yolov5.cpp
AI_Test_v1.0/AI_Engine/object_detector/yolov5/: CMakeLists.txt  common.hpp  dirent.h  utils.h  yololayer.cu  yololayer.h  yolov5.cpp
AI_Test_v1.0/AI_Engine/semantic_segmentation/: CMakeLists.txt
AI_Test_v1.0/AI_Engine/semantic_segmentation/inc/: semantic_segmentation.hpp  semantic_segmentation_tf.hpp  semantic_segmentation_torch.hpp
AI_Test_v1.0/AI_Engine/semantic_segmentation/src/: semantic_segmentation.cpp  semantic_segmentation_tf.cpp
AI_Test_v1.0/config/: config.yml  label.txt.txt
AI_Test_v2.0/: CMakeLists.txt  README.md.txt
AI_Test_v2.0/AI_Engine/: CMakeLists.txt
AI_Test_v2.0/AI_Engine/classifier/demo/: demo_classifier_image.cpp  demo_classifier_image_list.cpp
AI_Test_v2.0/AI_Engine/classifier/inc/: classifier.hpp  classifier_mxnet.hpp  classifier_torch.hpp
AI_Test_v2.0/AI_Engine/classifier/src/: classifier.cpp  classifier_tf.cpp
AI_Test_v2.0/AI_Engine/classifier_video/: CMakeLists.txt
AI_Test_v2.0/AI_Engine/classifier_video/demo/: CMakeLists.txt
AI_Test_v2.0/AI_Engine/classifier_video/inc/: classifier_video.hpp
AI_Test_v2.0/AI_Engine/classifier_video/src/: classifier_video.cpp
AI_Test_v2.0/AI_Engine/human_pose_estimation/: CMakeLists.txt
AI_Test_v2.0/AI_Engine/human_pose_estimation/demo/: CMakeLists.txt  demo_alphapose_video.cpp
AI_Test_v2.0/AI_Engine/human_pose_estimation/inc/: two_stage_pose_estimation.hpp
AI_Test_v2.0/AI_Engine/human_pose_estimation/src/: two_stage_pose_estimation.cpp
AI_Test_v2.0/AI_Engine/mot_tracker/src/: KalmanTracker.cpp  mot_tracker_sort.cpp
AI_Test_v2.0/AI_Engine/object_detector/: CMakeLists.txt  README.md
AI_Test_v2.0/AI_Engine/object_detector/demo/: CMakeLists.txt  demo_darknet.cpp  demo_tf_od_image.cpp  demo_tf_od_list.cpp  demo_trtx_od_image_yolov5.cpp
AI_Test_v2.0/AI_Engine/object_detector/inc/: logging.h  object_detector.hpp  object_detector_darknet.hpp  object_detector_tf.hpp  object_detector_tflite.hpp  object_detector_torch.hpp  object_detector_trtx_yolov5.hpp  yololayer.h
AI_Test_v2.0/AI_Engine/object_detector/src/: object_detector.cpp  object_detector_darknet.cpp  object_detector_mrcnn_tf.cpp  object_detector_tf_effidet.cpp  object_detector_torch.cpp  object_detector_trtx_yolov5.cpp
AI_Test_v2.0/AI_Engine/semantic_segmentation/demo/: CMakeLists.txt  demo_segmentation_image.cpp
AI_Test_v2.0/AI_Engine/semantic_segmentation/src/: semantic_segmentation_torch.cpp
AI_Test_v2.0/config/: config.yml  testset.txt
